[project]
name = "geoconnex-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.2",
]
